--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,15 +72,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTAwMDIwMSwianRpIjoiODcxNTM2NGYtOTQ3ZC00Njc3LWFmZDItM2I0ZTMyNWM1NTZjIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5MDAwMjAxLCJleHAiOjE2NTkwMDM4MDF9.aidQflc7pA3KQy6ShYFhwGnZZaZVxgqiewwM8L2nR8I\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTAwMDIwMSwianRpIjoiODcxNTM2NGYtOTQ3ZC00Njc3LWFmZDItM2I0ZTMyNWM1NTZjIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5MDAwMjAxLCJleHAiOjE2NTkwMDM4MDF9.aidQflc7pA3KQy6ShYFhwGnZZaZVxgqiewwM8L2nR8I'}\n"
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTAwMDU0OCwianRpIjoiNzdkMDM3ODUtODZiZC00MzYwLWFhMWItMmE4NWViOWU5YTg3IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5MDAwNTQ4LCJleHAiOjE2NTkwMDQxNDh9.9ENMy7cRVSjZG0MZ5YR5ajXrJmca5rjtxK6rabbbx10\n",
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTAwMDU0OCwianRpIjoiNzdkMDM3ODUtODZiZC00MzYwLWFhMWItMmE4NWViOWU5YTg3IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5MDAwNTQ4LCJleHAiOjE2NTkwMDQxNDh9.9ENMy7cRVSjZG0MZ5YR5ajXrJmca5rjtxK6rabbbx10'}\n"
      ]
     }
    ],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -148,14 +148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'project_names': ['project_1']}\n"
+      "{'project_names': []}\n"
      ]
     }
    ],
@@ -167,14 +167,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': \"[WinError 183] 當檔案已存在時，無法建立該檔案。: 'C:\\\\\\\\Users\\\\\\\\DevilHYT\\\\\\\\Desktop\\\\\\\\github\\\\\\\\wingman-api\\\\\\\\wingman-data\\\\\\\\wingman-projects\\\\\\\\project_1'\"}\n"
+      "{'msg': 'OK'}\n"
      ]
     }
    ],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -223,8 +223,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create a project for test below"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +243,6 @@
     }
    ],
    "source": [
-    "\"\"\"create project for test below\"\"\"\n",
     "r_post = requests.post(f'{BASE_URL}/projects', cookies=cookies, json={'project_name': 'project_1'})\n",
     "print(r_post.json())"
    ]
@@ -250,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -904,12 +910,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\"\"\"delete project for finish test\"\"\"\n",
+    "### Finish test. Delete the project."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
     "r_delete = requests.delete(f'{BASE_URL}/projects/project_1', cookies=cookies)\n",
     "print(r_delete.json())"
    ]
@@ -918,12 +938,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# test"
+    "# temp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
