--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -80,10 +80,10 @@
      "output_type": "stream",
      "text": [
       "token:\n",
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTg4OTEwNCwianRpIjoiY2EwOWM5ZmMtZmMyZC00YmEyLTg3MWQtNmUzOWVmOTU2M2MxIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5ODg5MTA0LCJleHAiOjE2NTk4OTI3MDR9.M6Na4H2923eNgOPtOxrRxVf3PL313A54bmTIK2uKB-Y\n",
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTkxNDExNSwianRpIjoiYWZjMTFkMDAtM2VkMy00OTIzLTkxZmItNDAwOWIzYjFlYzFkIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5OTE0MTE1LCJleHAiOjE2NTk5MTc3MTV9.RfYuEEWAjKvWeU_cE1le0-ii7iIYCXJxNUYDHzjUjis\n",
       "\n",
       "cookie:\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTg4OTEwNCwianRpIjoiY2EwOWM5ZmMtZmMyZC00YmEyLTg3MWQtNmUzOWVmOTU2M2MxIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5ODg5MTA0LCJleHAiOjE2NTk4OTI3MDR9.M6Na4H2923eNgOPtOxrRxVf3PL313A54bmTIK2uKB-Y'}\n"
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTkxNDExNSwianRpIjoiYWZjMTFkMDAtM2VkMy00OTIzLTkxZmItNDAwOWIzYjFlYzFkIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5OTE0MTE1LCJleHAiOjE2NTk5MTc3MTV9.RfYuEEWAjKvWeU_cE1le0-ii7iIYCXJxNUYDHzjUjis'}\n"
      ]
     }
    ],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -173,14 +173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Error message': '1 validation error for ProjectNameSchema\\nproject_name\\n  Cannot use relative path (type=value_error)'}\n"
+      "{'msg': 'OK'}\n"
      ]
     }
    ],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -919,12 +919,236 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Rule API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'rule_names': []}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"get rule names\"\"\"\n",
+    "r_get = requests.get(f'{BASE_URL}/projects/project_1/rules', cookies=cookies)\n",
+    "print(r_get.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"create a rule\"\"\"\n",
+    "r_post = requests.post(f'{BASE_URL}/projects/project_1/rules', cookies=cookies, json={'rule_name': 'rule_1'})\n",
+    "print(r_post.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"update a rule\"\"\"\n",
+    "content = {\n",
+    "  \"nodes\": [\n",
+    "    {\n",
+    "      \"type\": \"default\",\n",
+    "      \"dimensions\": {\n",
+    "        \"width\": 150,\n",
+    "        \"height\": 36\n",
+    "      },\n",
+    "      \"handleBounds\": {\n",
+    "        \"source\": [\n",
+    "          {\n",
+    "            \"id\": \"1__handle-bottom\",\n",
+    "            \"position\": \"bottom\",\n",
+    "            \"x\": 71,\n",
+    "            \"y\": 31,\n",
+    "            \"width\": 8,\n",
+    "            \"height\": 8\n",
+    "          }\n",
+    "        ],\n",
+    "        \"target\": [\n",
+    "          {\n",
+    "            \"id\": \"1__handle-top\",\n",
+    "            \"position\": \"top\",\n",
+    "            \"x\": 71,\n",
+    "            \"y\": -3,\n",
+    "            \"width\": 8,\n",
+    "            \"height\": 8\n",
+    "          }\n",
+    "        ]\n",
+    "      },\n",
+    "      \"computedPosition\": {\n",
+    "        \"x\": 100,\n",
+    "        \"y\": 100,\n",
+    "        \"z\": 0\n",
+    "      },\n",
+    "      \"id\": \"1\",\n",
+    "      \"label\": \"Node 1\",\n",
+    "      \"position\": {\n",
+    "        \"x\": 100,\n",
+    "        \"y\": 100\n",
+    "      }\n",
+    "    }\n",
+    "  ],\n",
+    "  \"edges\": [],\n",
+    "  \"position\": [\n",
+    "    0,\n",
+    "    0\n",
+    "  ],\n",
+    "  \"zoom\": 1\n",
+    "}\n",
+    "\n",
+    "r_put = requests.put(f'{BASE_URL}/projects/project_1/rules/rule_1', cookies=cookies, json=content)\n",
+    "print(r_put.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"update & rename a rule\"\"\"\n",
+    "content = {\n",
+    "  'new_rule_name': 'rule_2',\n",
+    "  \"nodes\": [\n",
+    "    {\n",
+    "      \"type\": \"default\",\n",
+    "      \"dimensions\": {\n",
+    "        \"width\": 150,\n",
+    "        \"height\": 36\n",
+    "      },\n",
+    "      \"handleBounds\": {\n",
+    "        \"source\": [\n",
+    "          {\n",
+    "            \"id\": \"1__handle-bottom\",\n",
+    "            \"position\": \"bottom\",\n",
+    "            \"x\": 71,\n",
+    "            \"y\": 31,\n",
+    "            \"width\": 8,\n",
+    "            \"height\": 8\n",
+    "          }\n",
+    "        ],\n",
+    "        \"target\": [\n",
+    "          {\n",
+    "            \"id\": \"1__handle-top\",\n",
+    "            \"position\": \"top\",\n",
+    "            \"x\": 71,\n",
+    "            \"y\": -3,\n",
+    "            \"width\": 8,\n",
+    "            \"height\": 8\n",
+    "          }\n",
+    "        ]\n",
+    "      },\n",
+    "      \"computedPosition\": {\n",
+    "        \"x\": 133,\n",
+    "        \"y\": 119,\n",
+    "        \"z\": 0\n",
+    "      },\n",
+    "      \"id\": \"1\",\n",
+    "      \"label\": \"Node 1\",\n",
+    "      \"position\": {\n",
+    "        \"x\": 133,\n",
+    "        \"y\": 119\n",
+    "      },\n",
+    "      \"selected\": False\n",
+    "    }\n",
+    "  ],\n",
+    "  \"edges\": [],\n",
+    "  \"position\": [\n",
+    "    -126.92906289092366,\n",
+    "    -87.27995323994386\n",
+    "  ],\n",
+    "  \"zoom\": 1.319507910772895\n",
+    "}\n",
+    "r_put = requests.put(f'{BASE_URL}/projects/project_1/rules/rule_1', cookies=cookies, json= content)\n",
+    "print(r_put.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"rename a rule\"\"\"\n",
+    "r_put = requests.put(f'{BASE_URL}/projects/project_1/rules/rule_2', cookies=cookies, json={'new_rule_name': 'rule_1'})\n",
+    "print(r_put.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"delete a rule\"\"\"\n",
+    "r_delete = requests.delete(f'{BASE_URL}/projects/project_1/rules/rule_1', cookies=cookies)\n",
+    "print(r_delete.json())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Finish test. Delete the project."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
